--- a/admin_2022/package.json
+++ b/admin_2022/package.json
@@ -54,6 +54,9 @@
     ]
   },
   "devDependencies": {
+    "@types/hoist-non-react-statics": "^3.3.1",
+    "@types/react-redux": "^7.1.25",
+    "@types/redux": "^3.6.0",
     "typescript": "^4.9.5"
   }
 }
